@@ -1,15 +1,15 @@
 #ifndef __MYSLANG_H
 #define __MYSLANG_H
 
-#ifdef HAVE_SYSTEM_SLANG
+#if defined(USE_INCLUDED_SLANG) || !defined (HAVE_SYSTEM_SLANG)
+#    include "../slang/include/slang.h"
+#else
 #ifdef HAVE_SLANG_SLANG_H
 #    include <slang/slang.h>
 #else
 #    include <slang.h>
+#endif	/* HAVE_SLANG_SLANG_H */
 #endif
-#else /* !HAVE_SYSTEM_SLANG */
-#    include "../slang/include/slang.h"
-#endif /* !HAVE_SYSTEM_SLANG */
 
 enum {
     KEY_BACKSPACE = 400,
